# hhapiandpostgre

./: .gitignore  README.md  create_db.py  gitignore  main.py  pyproject.toml
db/: db_manager.py  db_queries.sql  db_query.py  employer.py  vacancy.py
loader/: data_load.py
src/: config.py  database.ini  hhru_api.py
