[tool.poetry]
name = "scrapping hh-ru and postgre"
version = "0.1.0"
description = "This apps need for fuling database another date in API"
authors = ["Антон Федяев <fearthe54@gmail.com>"]
readme = "README.md"
packages = [{include = "scrapping hh"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
